--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -2,6 +2,8 @@
 
 source "https://rubygems.org"
 
+ruby "2.2.1"
+
 eval_gemfile File.expand_path("../../../react_on_rails.gemspec", __FILE__)
 
 gem "react_on_rails", path: "../.."
@@ -28,9 +30,7 @@ gem "jquery-rails"
 gem "puma"
 
 # Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
-if ENV["DISABLE_TURBOLINKS"].nil? || ENV["DISABLE_TURBOLINKS"].strip.empty?
-  gem "turbolinks", "~> 5.0"
-end
+gem "turbolinks", "~> 5.0" if ENV["DISABLE_TURBOLINKS"].nil? || ENV["DISABLE_TURBOLINKS"].strip.empty?
 
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem "jbuilder"
