--- a/spec/dummy/client/package.json
+++ b/spec/dummy/client/package.json
@@ -2,6 +2,10 @@
   "name": "client",
   "version": "1.0.0",
   "description": "example of server rendering",
+  "engines": {
+    "node": "6.3.1",
+    "yarn": "1.5.1"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/shakacode/react_on_rails.git"
@@ -35,7 +39,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-helmet": "^5.0.3",
-    "react-on-rails": "7.0.4",
+    "react-on-rails": "^10.1.3",
     "react-on-rails-renderer": "file:../../..",
     "react-redux": "^5.0.4",
     "react-router": "3.0.5",
