--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -4,7 +4,8 @@
   "description": "example of server rendering",
   "main": "server.js",
   "engines": {
-    "node": "4.2.0"
+    "node": "6.3.1",
+    "yarn": "1.5.1"
   },
   "scripts": {
     "postinstall": "cd ./client && yarn install",
@@ -13,12 +14,12 @@
     "lint": "cd client && yarn run lint",
     "install-react-on-rails-renderer": "cd client && yarn run install-react-on-rails-renderer",
     "build:clean": "rm -r app/assets/webpack/* || true",
-    "build:production:client": "(cd client && yarn run build:production:client --silent)",
-    "build:production:server": "(cd client && yarn run build:production:server --silent)",
-    "build:client": "(cd client && yarn run build:client --silent",
-    "build:server": "(cd client && yarn run build:server --silent)",
-    "build:dev:client": "(cd client && yarn run build:dev:client --silent)",
-    "build:dev:server": "(cd client && yarn run build:dev:server --silent)",
+    "build:production:client": "(cd client && yarn run build:production:client)",
+    "build:production:server": "(cd client && yarn run build:production:server)",
+    "build:client": "(cd client && yarn run build:client)",
+    "build:server": "(cd client && yarn run build:server)",
+    "build:dev:client": "(cd client && yarn run build:dev:client)",
+    "build:dev:server": "(cd client && yarn run build:dev:server)",
     "node-renderer": "(cd client && yarn run node-renderer)",
     "hot-assets": "(cd client && yarn run hot-assets)"
   },
