--- a/react_on_rails_pro/package.json
+++ b/react_on_rails_pro/package.json
@@ -1,8 +1,12 @@
 {
   "name": "react-on-rails-renderer",
-  "version": "0.5.2",
+  "version": "0.5.3",
   "description": "react-on-rails-renderer JavaScript for react_on_rails_renderer Ruby gem",
   "main": "node_package/src/ReactOnRailsRenderer.js",
+  "engines": {
+    "node": "6.3.1",
+    "yarn": "1.5.1"
+  },
   "directories": {
     "doc": "docs"
   },
