--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-on-rails-renderer",
-  "version": "0.5.3",
+  "version": "0.5.4",
+  "protocolVersion": "1",
   "description": "react-on-rails-renderer JavaScript for react_on_rails_renderer Ruby gem",
   "main": "node_package/src/ReactOnRailsRenderer.js",
   "engines": {
@@ -44,9 +45,7 @@
     "tap-spec": "^4.1.1",
     "tape": "^4.6.3"
   },
-  "files": [
-    "node_package/src"
-  ],
+  "files": ["node_package/src"],
   "scripts": {
     "start": "node renderer.js",
     "test": "babel-tape-runner node_package/tests/*.js | tap-spec",
@@ -54,20 +53,14 @@
     "flow": "flow check node_package",
     "lint": "yarn run eslint && yarn run flow",
     "check": "yarn run lint && yarn run flow && yarn run test",
-    "local": "echo 'Be sure to run yarn run dummy:install' && yarn run build && cd spec/dummy && foreman start"
+    "local":
+      "echo 'Be sure to run yarn run dummy:install' && yarn run build && cd spec/dummy && foreman start"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/shakacode/react-on-rails-renderer.git"
   },
-  "keywords": [
-    "react",
-    "webpack",
-    "JavaScript",
-    "Ruby",
-    "on",
-    "Rails"
-  ],
+  "keywords": ["react", "webpack", "JavaScript", "Ruby", "on", "Rails"],
   "author": "justin.gordon@gmail.com",
   "license": "MIT",
   "bugs": {
