--- a/react_on_rails_pro/.circleci/config.yml
+++ b/react_on_rails_pro/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
   # Install Node modules for Renderer package with Yarn and save them to chache.
   install-package-node-packages:
     docker:
-      - image: dzirtusss/ror-renderer:1.0.3
+      - image: shakacode/ror-renderer:1.0.3
     steps:
       - checkout
       - run: *print-system-info
@@ -65,7 +65,7 @@ jobs:
   # Install Node modules for dummy app with Yarn and save them to chache.
   install-dummy-app-node-packages:
     docker:
-      - image: dzirtusss/ror-renderer:1.0.3
+      - image: shakacode/ror-renderer:1.0.3
     steps:
       - checkout
       - run: *print-system-info
@@ -80,7 +80,7 @@ jobs:
   # Install Ruby gems for dummy app with Bundler and save them to cache.
   install-dummy-app-ruby-gems:
     docker:
-      - image: dzirtusss/ror-renderer:1.0.3
+      - image: shakacode/ror-renderer:1.0.3
     steps:
       - checkout
       - run: *print-system-info
@@ -94,7 +94,7 @@ jobs:
   # Build client and server bundles for dummy app with Webpack and save them to cache.
   build-dummy-app-webpack-test-bundles:
     docker:
-      - image: dzirtusss/ror-renderer:1.0.3
+      - image: shakacode/ror-renderer:1.0.3
     steps:
       - checkout
       - run: *print-system-info
@@ -111,7 +111,7 @@ jobs:
   # Run JS unit tests for Renderer package.
   package-js-tests:
     docker:
-      - image: dzirtusss/ror-renderer:1.0.3
+      - image: shakacode/ror-renderer:1.0.3
     steps:
       - checkout
       - run: *print-system-info
@@ -123,7 +123,7 @@ jobs:
   # Start Renderer and run RSpec test suite for dummy app.
   rspec-dummy-app:
     docker:
-      - image: dzirtusss/ror-renderer:1.0.3
+      - image: shakacode/ror-renderer:1.0.3
     steps:
       - checkout
       - run: *print-system-info
