--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -28,12 +29,12 @@
     "express": "^4.15.2",
     "express-busboy": "^6.0.1",
     "fs-extra": "^3.0.1",
+    "lockfile": "^1.0.4",
     "semver": "^5.5.0",
-    "supertest": "^3.0.0",
-    "winston": "^2.3.1"
+    "source-map-support": "^0.5.9",
+    "winston": "^3.0.0"
   },
   "devDependencies": {
-    "blue-tape": "^1.0.0",
     "eslint": "^4.9.0",
     "eslint-config-shakacode": "^16.0.1",
     "eslint-plugin-import": "^2.8.0",
@@ -42,23 +43,29 @@
     "flow-bin": "^0.43.1",
     "jsdom": "^9.12.0",
     "release-it": "^2.7.1",
+    "sleep-promise": "^8.0.1",
+    "supertest": "^3.0.0",
+    "tap-diff": "^0.1.1",
     "tap-spec": "^4.1.1",
-    "tape": "^4.6.3"
+    "tape": "^4.6.3",
+    "tape-async": "^2.3.0",
+    "touch": "^3.1.0"
   },
   "files": [
     "packages/vm-renderer/lib"
   ],
   "scripts": {
-    "test": "babel-tape-runner packages/vm-renderer/tests/*.js | tap-spec",
+    "test": "babel-tape-runner packages/vm-renderer/tests/*.js | tap-diff",
+    "test-spec": "babel-tape-runner packages/vm-renderer/tests/*.js | tap-spec",
     "clean": "rm -rf packages/vm-renderer/lib",
     "babel": "babel --out-dir packages/vm-renderer/lib packages/vm-renderer/src",
     "build": "yarn run clean && yarn run babel",
-    "build:dev": "yarn run clean && yarn run babel -w",
+    "build:dev": "yarn run clean && yarn run babel -w --source-maps",
     "postinstall": "yarn run build",
-    "build-watch": "babel --watch --out-dir packages/vm-renderer/lib packages/vm-renderer/src",
     "prepublish": "yarn run build",
     "prerelease": "yarn run check && yarn run clean && yarn run build",
-    "start": "echo 'Starting React on Rails Pro VM Renderer using the default configuration.' && node packages/vm-renderer/lib/default-vm-renderer.js",
+    "start": "echo 'Starting React on Rails Pro VM Renderer using the default configuration.' && node --experimental-modules packages/vm-renderer/lib/default-vm-renderer.js",
+    "developing": "rm -rf /tmp/react-on-rails-pro-vm-renderer-bundles && RENDERER_LOG_LEVEL=info NODE_DEBUG=ROR node  -r source-map-support/register --experimental-modules packages/vm-renderer/lib/default-vm-renderer.js",
     "eslint": "eslint .",
     "flow": "flow check packages/vm-renderer",
     "lint": "yarn run eslint",
