--- a/react_on_rails_pro/package.json
+++ b/react_on_rails_pro/package.json
@@ -11,19 +11,20 @@
     "doc": "docs"
   },
   "dependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-react-transform": "^2.0.2",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.3",
+    "babel-loader": "7.1.5",
+    "babel-plugin-module-resolver": "3.1.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.13",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "1.7.0",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-runtime": "^6.25.0",
-    "babel-tape-runner": "^2.0.1",
-    "babel-types": "^6.25.0",
+    "babel-register": "^6.26.0",
+    "babel-runtime": "^6.26.0",
     "babelify": "^7.3.0",
     "console.history": "^1.5.0",
     "express": "^4.15.2",
@@ -35,12 +36,20 @@
     "winston": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-rc.3",
+    "babel-jest": "^23.4.2",
+    "babel-plugin-flow-react-proptypes": "7.0.0",
+    "babel-plugin-react-transform": "^3.0.0",
+    "babel-plugin-typecheck": "^3.9.0",
+    "babel-preset-react-hmre": "^1.1.1",
     "eslint": "^4.9.0",
     "eslint-config-shakacode": "^16.0.1",
     "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jest": "^21.22.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "flow-bin": "^0.43.1",
+    "jest": "^23.5.0",
     "jsdom": "^9.12.0",
     "release-it": "^2.7.1",
     "sleep-promise": "^8.0.1",
@@ -55,8 +64,7 @@
     "packages/vm-renderer/lib"
   ],
   "scripts": {
-    "test": "babel-tape-runner packages/vm-renderer/tests/*.js | tap-diff",
-    "test-spec": "babel-tape-runner packages/vm-renderer/tests/*.js | tap-spec",
+    "test": "jest packages/vm-renderer/tests/**/*.test.js",
     "clean": "rm -rf packages/vm-renderer/lib",
     "babel": "babel --out-dir packages/vm-renderer/lib packages/vm-renderer/src",
     "build": "yarn run clean && yarn run babel",
@@ -90,5 +98,24 @@
   "bugs": {
     "url": "https://github.com/shakacode/react_on_rails_pro/issues"
   },
-  "homepage": "https://github.com/shakacode/react_on_rails_pro#readme"
+  "homepage": "https://github.com/shakacode/react_on_rails_pro#readme",
+  "jest": {
+    "clearMocks": true,
+    "collectCoverageFrom": [
+      "packages/vm-renderer/tests/**/*.{js,jsx}"
+    ],
+    "coverageReporters": [
+      "lcov"
+    ],
+    "resetModules": true,
+    "resetMocks": true,
+
+    "setupFiles": [
+      "./packages/vm-renderer/tests/helper.js"
+    ],
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
+  }
 }
