--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "babel-runtime": "^6.25.0",
     "babel-tape-runner": "^2.0.1",
     "babel-types": "^6.25.0",
     "babelify": "^7.3.0",
@@ -41,7 +40,6 @@
     "webpack-manifest-plugin": "^1.2.1"
   },
   "peerDependencies": {
-    "babel-runtime": ">= 6",
     "js-yaml": ">= 3.0.0",
     "react": ">= 0.14",
     "react-dom": ">= 0.14"
@@ -88,5 +86,7 @@
     "url": "https://github.com/shakacode/react_on_rails/issues"
   },
   "homepage": "https://github.com/shakacode/react_on_rails#readme",
-  "dependencies": {}
+  "dependencies": {
+    "babel-runtime": "6"
+  }
 }
