--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -42,7 +42,8 @@ gem "sdoc", group: :doc
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 gem "awesome_print"
-gem "mini_racer"
+# gem "mini_racer"
+gem 'mini_racer', '~> 0.2.3'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
