--- a/react_on_rails_pro/package.json
+++ b/react_on_rails_pro/package.json
@@ -30,6 +30,7 @@
     "express": "^4.15.2",
     "express-busboy": "^6.0.1",
     "fs-extra": "^3.0.1",
+    "honeybadger": "^1.3.0",
     "lockfile": "^1.0.4",
     "semver": "^5.5.0",
     "sleep-promise": "^8.0.1",
@@ -109,7 +110,6 @@
     ],
     "resetModules": true,
     "resetMocks": true,
-
     "setupFiles": [
       "./packages/vm-renderer/tests/helper.js"
     ],
