--- a/react_on_rails_pro/package-scripts.yml
+++ b/react_on_rails_pro/package-scripts.yml
@@ -2,10 +2,10 @@ scripts:
   test:
     default:
       description: Run all JS tests
-      script: jest packages/node-renderer/**/*.test.js
+      script: jest packages/node-renderer/**/*.test.js jest packages/node-renderer/**/**/*.test.js
     debug:
       description: Debug all JS tests
-      script: ndb jest --runInBand packages/node-renderer/**/*.test.js
+      script: ndb jest --runInBand packages/node-renderer/**/*.test.js packages/node-renderer/**/**/*.test.js
   check:
     description: Run all checks
     script: nps lint && nps format.listDifferent && nps test
@@ -15,7 +15,7 @@ scripts:
   node-renderer:
     default:
       description:
-      script: jest packages/node-renderer/**/*.test.js
+      script: jest packages/node-renderer/**/*.test.js packages/node-renderer/**/**/*.test.js
     debug:
       description: Debug Node Renderer
       script: rm -rf /tmp/react-on-rails-pro-node-renderer-bundles && RENDERER_LOG_LEVEL=info NODE_DEBUG=ROR node -r source-map-support/register packages/node-renderer/src/default-node-renderer.js
