--- a/react_on_rails_pro/package.json
+++ b/react_on_rails_pro/package.json
@@ -24,13 +24,11 @@
     "doc": "docs"
   },
   "dependencies": {
-    "@sentry/node": "^5.17.0",
     "concurrently": "^4.0.1",
     "console.history": "^1.5.0",
     "express": "^4.15.2",
     "express-busboy": "^7.0.1",
     "fs-extra": "^8.0.1",
-    "honeybadger": "^1.3.0",
     "lockfile": "^1.0.4",
     "semver": "^5.5.0",
     "sleep-promise": "^8.0.1",
@@ -38,7 +36,13 @@
     "winston": "^3.0.0"
   },
   "devDependencies": {
+    "@sentry/node": "^5.17.0",
+    "@sentry/tracing": "^5.27.3",
+    "honeybadger": "^1.3.0",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^26.6.3",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-config-shakacode": "^17.0.0",
@@ -48,7 +52,7 @@
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.19.0",
     "husky": "^1.3.1",
-    "jest": "^25.1.0",
+    "jest": "^26.6.3",
     "jsdom": "^13.1.0",
     "ndb": "^1.1.5",
     "nps": "^5.9.12",
@@ -61,6 +65,11 @@
     "tape-async": "^2.3.0",
     "touch": "^3.1.0",
     "yalc": "^1.0.0-pre.27"
+  },
+  "peerDependencies": {
+    "@sentry/node": "^5.17.0",
+    "@sentry/tracing": "^5.27.3",
+    "honeybadger": "^1.3.0"
   },
   "files": [
     "packages/node-renderer/src"
@@ -108,7 +117,11 @@
     "testEnvironment": "node",
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
-    }
+    },
+    "moduleDirectories": [
+      "node_modules",
+      "./packages/vm-renderer/src"
+    ]
   },
   "husky": {
     "hooks": {
