--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -26,7 +26,7 @@
     "react-on-rails": "12.0.4",
     "react-proptypes": "^1.0.0",
     "react-redux": "^5.0.5",
-    "react-router": "^3.2.1",
+    "react-router-dom": "^5.2.0",
     "react-select": "^2.0.0-beta.7",
     "redux": "^4.0.1",
     "redux-thunk": "^2.2.0",
