--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -16,6 +16,10 @@
     "imports-loader": "^1.2.0",
     "jquery": "^3.4.1",
     "jquery-ujs": "^1.2.2",
+    "@loadable/babel-plugin": "^5.13.2",
+    "@loadable/component": "^5.14.1",
+    "@loadable/server": "^5.14.0",
+    "@loadable/webpack-plugin": "^5.14.0",
     "lodash": "^4.17.4",
     "node-libs-browser": "^2.2.1",
     "nps": "^5.9.3",
@@ -26,6 +30,7 @@
     "react-on-rails": "12.0.4",
     "react-proptypes": "^1.0.0",
     "react-redux": "^5.0.5",
+    "react-refresh": "^0.8.1",
     "react-router-dom": "^5.2.0",
     "react-select": "^2.0.0-beta.7",
     "redux": "^4.0.1",
@@ -53,7 +58,7 @@
     "preinstall": "yarn run link-source && yalc add --link @shakacode-tools/react-on-rails-pro-node-renderer",
     "link-source": "cd ../.. && yalc publish",
     "build:test": "rm -rf public/webpack/test && RAILS_ENV=test NODE_ENV=test bin/webpack",
-    "build:dev": "rm -rf public/webpack/develoment && RAILS_ENV=development NODE_ENV=development bin/webpack",
+    "build:dev": "rm -rf public/webpack/development && RAILS_ENV=development NODE_ENV=development bin/webpack",
     "build:dev:watch": "RAILS_ENV=development NODE_ENV=development bin/webpack --watch",
     "build:production": "RAILS_ENV=production NODE_ENV=production bin/webpack -p",
     "build:clean": "rm -rf public/webpack || true",
