--- a/spec/loadable/package.json
+++ b/spec/loadable/package.json
@@ -24,32 +24,30 @@
     "@loadable/component": "^5.14.1",
     "@loadable/server": "^5.14.0",
     "@loadable/webpack-plugin": "^5.14.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.1.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@rails/webpacker": "^5.2.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-inline-react-svg": "^1.1.2",
     "babel-runtime": "6.26.0",
     "caniuse-lite": "^1.0.30001032",
     "circular-dependency-plugin": "^5.2.2",
-    "compression-webpack-plugin": "^6.0.4",
+    "compression-webpack-plugin": "^7.1.2",
+    "css-loader": "^5.1.2",
     "es5-shim": "^4.5.10",
-    "expose-loader": "^1.0.1",
-    "file-loader": "^6.2.0",
     "idempotent-babel-polyfill": "^7.2.5",
-    "imports-loader": "^1.2.0",
     "lodash": "^4.17.20",
-    "mini-css-extract-plugin": "^1.2.1",
-    "nps": "^5.9.12",
+    "moment": "^2.24.0",
+    "nps": "^5.10.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-helmet": "^6.1.0",
     "react-on-rails": "12.0.4",
-    "react-refresh": "^0.8.1",
+    "react-refresh": "^0.9.0",
     "react-router-dom": "^5.2.0",
+    "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.0.3",
-    "trash-cli": "^3.0.0",
+    "trash-cli": "^4.0.0",
     "uglifyjs-webpack-plugin": "^2.1.1",
-    "url-loader": "^4.1.1",
     "webpack-merge": "^5.3.0",
     "webpack-notifier": "^1.7.0",
     "yalc": "^1.0.0-pre.35"
